tests/syntax_tests/data/parsing/errors/other/hashIdent.res
let x = #10s

type t = [ #red | #10s ] 

switch x {
| #10s => ()
}
